--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         // Discord OAuth2 Configuration
         const clientId = '1193670386202722324';
         const clientSecret = 'yVyaI7hoNgHlZCFMy1X0DkxKrB0yp1L5'; // Keep this secret!
-        const redirectUri = 'https://discord.com/api/oauth2/authorize?client_id=1193670386202722324&response_type=code&redirect_uri=https%3A%2F%2Fztpr.co.uk%2Fcoupon&scope=identify+guilds+guilds.join+guilds.members.read'; // This should be registered in your Discord Developer Portal
+        const redirectUri = 'https://zptr.co.uk/coupon'; // This should be registered in your Discord Developer Portal
         const scope = 'identify guilds';
 
         if (urlParams.has('code')) {
