--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         // Discord OAuth2 Configuration
         const clientId = '1193670386202722324';
         const clientSecret = 'yVyaI7hoNgHlZCFMy1X0DkxKrB0yp1L5'; // Keep this secret!
-        const redirectUri = 'https://coderhades.github.io/2authtest/done.html'; // This should be registered in your Discord Developer Portal
+        const redirectUri = 'https://login.zptr.co.uk/complete'; // This should be registered in your Discord Developer Portal
         const scope = 'identify guilds';
 
         if (urlParams.has('code')) {
